tests/pass/FIXME_test_smart_ptr_borrow.tk
// tests/pass/test_smart_ptr_borrow.tk

import std/io::*

fn main() -> i32 {
    // Unique Pointer Test
    {
        auto ^p = new i32(100)
        {
            auto &x = &p
            // println("Borrowed unique: {}", x)
            // p cannot be moved/mutated here
        }
        // now released
        auto ^q = ^p // Move OK
    }

    // Shared Pointer Test
    {
        auto ~s# = new i32(200) // Mutable variable s
        {
            auto &y = &s
            // println("Borrowed shared: {}", y)
            // s cannot be mutated here
        }
        s = new i32(300) // Mutate/Reset is now allowed
    }
    
    return 0
}
