tests/fail/unique_freeze_move.tk
// tests/fail/fail_unique_freeze_move.tk

fn main() -> i32 {
    auto ^p = new i32(10)
    
    // Borrow p (freezes p)
    auto &x = &p

    // ERROR: Cannot move 'p' while it is borrowed
    auto ^q = ^p 

    // Use x to keep it alive
    return x
}
// EXPECT: E0440
